bump up JDK to 11